--- a/.m2c/local/docker/docker-compose.varnish.yml
+++ b/.m2c/local/docker/docker-compose.varnish.yml
@@ -23,10 +23,10 @@ services:
       - nginx
     labels:
       - traefik.enable=true
-      - traefik.http.routers.varnish-${M2C_PROJECT_NAME}.tls=true
-      - traefik.http.routers.varnish-${M2C_PROJECT_NAME}.entryPoints=https
-      - traefik.http.routers.varnish-${M2C_PROJECT_NAME}.rule=Host(`${M2C_CFG_DOMAIN_NAME}${M2C_CFG_EXTRA_DOMAIN_NAMES}`)
-      - traefik.http.services.varnish-${M2C_PROJECT_NAME}.loadbalancer.server.port=80
+      - traefik.http.routers.varnish-${COMPOSE_PROJECT_NAME}.tls=true
+      - traefik.http.routers.varnish-${COMPOSE_PROJECT_NAME}.entryPoints=https
+      - traefik.http.routers.varnish-${COMPOSE_PROJECT_NAME}.rule=Host(${M2C_CFG_DOMAIN_NAMES})
+      - traefik.http.services.varnish-${COMPOSE_PROJECT_NAME}.loadbalancer.server.port=80
     networks:
       default:
         aliases:
